# HOPE

./: .gitignore
.github/: copilot-instructions.md
.trae/: instructions.md
src/: configs.py  test.py
src/env/: car_parking_base.py  reeds_shepp.py  vehicle.py
src/model/agent/: parking_agent.py  ppo_agent.py  sac_agent.py
src/train/: train_HOPE_sac.py
src2/: CMakeLists.txt  README.md  export_episode.py  export_torchscript.py  run.sh
src2/data/: episode.json
src2/include/: apa_planner.h  bicycle_model.h  scene_loader.h  visualizer.h
src2/model/: actor_traced.pt
src2/src/: apa_planner.cpp  main.cpp  visualizer.cpp
